--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.21",
     "knex-cleaner": "^1.3.1",
+    "migrate": "^1.7.0",
     "sqlite3": "^5.0.2",
     "test": "^0.6.0"
   }
